feat: add few methods to StringHelper and introduce first real test